# drf-cursor-test

./: .env  README.md  db.sqlite3  pyproject.toml  pytest.ini
blog_project/: exceptions.py  settings.py  urls.py
book/: admin.py  filters.py  models.py  serializers.py  urls.py  validators.py  views.py
book/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
lab/: models.py  serializers.py  urls.py  validators.py  views.py
lab/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
people/: models.py  serializers.py  urls.py  validators.py  views.py
people/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
study/: models.py  serializers.py  urls.py  validators.py  views.py
study/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
user/: admin.py  models.py  serializers.py  views.py
user/tests/: test_views.py
